<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_race"
        android:title="@string/nav_race"
        android:icon="@drawable/ic_race"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_drivers"
        android:title="@string/nav_drivers"
        android:icon="@drawable/ic_driver"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_teams"
        android:title="@string/nav_teams"
        android:icon="@drawable/ic_team"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_calendar"
        android:title="@string/nav_calendar"
        android:icon="@drawable/ic_calendar"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_games"
        android:icon="@drawable/ic_games"
        android:title="@string/nav_games"
        tools:ignore="HardcodedText" />

</menu>
